--- a/app/src/main/res/layout/content_calculoimc.xml
+++ b/app/src/main/res/layout/content_calculoimc.xml
@@ -51,6 +51,7 @@
         android:id="@+id/button2"
         android:layout_marginTop="440dp"
         android:layout_marginLeft="20dp"
+        android:onClick="sair"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Log Out" />
