--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -14,19 +14,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="126dp"
-        android:layout_height="82dp"
-        android:background="@color/colorPrimary"
-        android:fontFamily="sans-serif-black"
-        android:onClick="calcularIMC"
-        android:text="IMC"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="58dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="170dp"
+            android:layout_height="82dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorPrimary"
+            android:fontFamily="sans-serif-black"
+            android:onClick="calcularIMC"
+            android:text="IMC"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="25dp"
+            tools:layout_editor_absoluteY="58dp" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="170dp"
+            android:layout_height="82dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorPrimary"
+            android:fontFamily="sans-serif-black"
+            android:onClick="converter"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="conversao"
+            android:textColor="#ffffff"
+            android:textSize="24sp" />
+    </LinearLayout>
 
 </LinearLayout>
