--- a/app/src/main/res/layout/activity_lista_de_produtos.xml
+++ b/app/src/main/res/layout/activity_lista_de_produtos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".principal">
+    tools:context=".ListaDeProdutos">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -20,9 +20,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/content_principal"
-        android:layout_height="144dp" />
+    <include layout="@layout/content_lista_de_produtos" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -30,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="#ffffff"
+        app:srcCompat="@drawable/icon12"
+        tools:srcCompat="@drawable/icon12" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
