--- a/app/src/main/res/layout/activity_produto.xml
+++ b/app/src/main/res/layout/activity_produto.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:scrollbarSize="4dp"
-    tools:context=".produto">
+    tools:context=".ui.produto">
 
     <ImageView
         android:id="@+id/imagem"
@@ -35,7 +35,7 @@
             android:textSize="24sp" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/textNome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
@@ -64,14 +64,15 @@
             android:textSize="24sp" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/textQuant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:ems="10"
             android:hint="Digite a quantidade do produto..."
-            android:inputType="textPersonName" />
+            android:inputType="number" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -103,31 +104,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="92dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
             android:layout_weight="1"
             android:backgroundTint="#B2D50000"
             android:fontFamily="sans-serif-smallcaps"
-            android:text="Delete"
+            android:text="Deletar"
             android:textColor="#090808"
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
             android:layout_weight="1"
+            android:onClick="validar"
             android:backgroundTint="#EB64DD17"
             android:fontFamily="sans-serif-smallcaps"
-            android:text="Save"
+            android:text="Salvar"
             android:textSize="18sp" />
     </LinearLayout>
 
