--- a/app/src/main/res/layout/content_calculoimc.xml
+++ b/app/src/main/res/layout/content_calculoimc.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".calculoimc"
+    tools:context=".ui.calculoimc"
     tools:showIn="@layout/activity_calculoimc">
 
     <EditText
