--- a/app/src/main/res/layout/content_lista_de_produtos.xml
+++ b/app/src/main/res/layout/content_lista_de_produtos.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ListaDeProdutos"
+    tools:context=".ui.ListaDeProdutos"
     tools:layout_editor_absoluteY="56dp"
     tools:showIn="@layout/activity_lista_de_produtos">
 
