--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".principal"
+    tools:context=".ui.principal"
     tools:showIn="@layout/activity_principal">
 
     <androidx.constraintlayout.widget.Group
@@ -35,7 +35,7 @@
             tools:layout_editor_absoluteY="58dp" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnSave"
             android:layout_width="170dp"
             android:layout_height="82dp"
             android:layout_marginLeft="20dp"
@@ -57,25 +57,10 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnSave"
             android:layout_width="170dp"
             android:layout_height="82dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/colorPrimary"
-            android:fontFamily="sans-serif-black"
-            android:onClick="sobre"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:text="Sobre"
-            android:textColor="#ffffff"
-            android:textSize="24sp" />
-
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="170dp"
-            android:layout_height="82dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:fontFamily="sans-serif-black"
