--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,35 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.principal">
+    android:orientation="vertical"
+    android:padding="20dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".ui.Principal"
+    tools:showIn="@layout/activity_principal">
 
-    <com.google.android.material.appbar.AppBarLayout
+
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_margin="20dp"
+        android:background="#008577"
+        android:fontFamily="sans-serif"
+        android:onClick="irParaCalculo"
+        android:text="@string/imc"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="1dp" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <include
-        layout="@layout/content_principal"
-        android:layout_height="144dp" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_margin="20dp"
+        android:background="#008577"
+        android:fontFamily="sans-serif"
+        android:onClick="irParaConversao"
+        android:text="@string/cn"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="1dp" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="#008577"
+        android:fontFamily="sans-serif"
+        android:onClick="irParaLista"
+        android:text="@string/list"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="1dp" />
+
+</LinearLayout>
