--- a/app/src/main/res/layout/activity_conversao.xml
+++ b/app/src/main/res/layout/activity_conversao.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".ui.conversao">
+    android:orientation="vertical"
+    android:layout_margin="25dp"
+    tools:context=".ui.Conversao">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,182 +14,151 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/editBytes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/edtNumero"
+            android:layout_width="123dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
             android:ems="10"
             android:inputType="number" />
 
         <Spinner
-            android:id="@+id/spinnerConvert"
-            android:layout_width="157dp"
-            android:layout_height="39dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:entries="@array/tipo" />
+            android:id="@+id/converterDe"
+            android:layout_width="112dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
 
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:orientation="horizontal">
+            android:entries="@array/tipo"
+            android:gravity="center"
+            android:scrollbarSize="7dp" />
 
         <Button
-            android:id="@+id/BotaoConverter"
-            android:layout_width="327dp"
+            android:layout_width="105dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="calcularConversao"
-            android:layout_marginHorizontal="50dp"
-            android:background="@color/colorPrimary"
-            android:text="Converter"
+            android:background="#008577"
+            android:onClick="converterNum"
+            android:text="@string/cnvrt"
             android:textColor="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="68dp"
-    android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="10dp"
-        android:text="KB"
-        android:textColor="#070404"
-        android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="-->"
-            android:textColor="#110C0C"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/textKB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:textSize="18sp" />
-</LinearLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:text="MB"
-            android:textColor="#070404"
-            android:textSize="24sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="-->"
-            android:textColor="#110C0C"
-            android:textSize="30sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="KB"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textMB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:text="GB"
-            android:textColor="#070404"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="-->"
-            android:textColor="#110C0C"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/textGB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:text="TB"
-            android:textColor="#070404"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="-->"
-            android:textColor="#110C0C"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/textTB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:textSize="18sp" />
+            <TextView
+                android:id="@+id/edtKB"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="18sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="15dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/errorText"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="MB"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/edtMB"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="18sp" />
+        </LinearLayout>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:layout_marginTop="15dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="GB"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/edtGB"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="51dp"
+        android:layout_marginTop="15dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="51dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="TB"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/edtTB"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/errorTxt"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:textSize="18sp" />
 
 </LinearLayout>
