--- a/app/src/main/res/layout/activity_lista_de_produtos.xml
+++ b/app/src/main/res/layout/activity_lista_de_produtos.xml
@@ -28,8 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="#ffffff"
-        app:srcCompat="@drawable/icon12"
-        tools:srcCompat="@drawable/icon12" />
+        app:fabSize="auto"
+        app:maxImageSize="40dp"
+        app:srcCompat="@mipmap/ic_add"
+        tools:srcCompat="@mipmap/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
