--- a/app/src/main/res/layout/activity_sobre.xml
+++ b/app/src/main/res/layout/activity_sobre.xml
@@ -5,69 +5,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="25dp"
     tools:context=".ui.Sobre">
 
     <ImageView
         android:id="@+id/imagem"
         android:layout_width="match_parent"
-        android:layout_height="205dp"
-        android:layout_marginTop="20dp"
         android:onClick="tirarFoto"
-        app:srcCompat="@drawable/icon" />
+        android:layout_height="283dp"
+        app:srcCompat="@drawable/ic_login" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Sobre a empresa"
-        android:textColor="#0B090C"
-        android:textSize="24sp" />
+        android:layout_height="61dp"
+        android:gravity="center"
+        android:text="Sobre o desenvolvedor"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Desenvolvido pela PhilipCorps este aplicativo tem o objetivo de disponibilizar várias ferramentas que auxiliam em varias atividades e operações."
-        android:textColor="#111010"
+        android:layout_marginBottom="2dp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:text="Desenvolvido por Gabriel Périco"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:text="Curso de Técnico de Informatica pra Internet"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Contato"
-        android:textColor="#0B090C"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Telefone: (49)36220540"
-        android:textColor="#111010"
-        android:textSize="18sp" />
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Rua: Francisco Vieira 1122"
-        android:textColor="#111010"
+        android:layout_marginBottom="2dp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:text="SENAC São Miguel do Oeste Santa Catarina"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:text="Professor Rafael"
+        android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:text="Ano 2019"
+        android:textSize="18sp" />
 </LinearLayout>
