Feita mais umas atualizações na parte dos animes.

--- a/app/src/main/res/layout/activity_anime.xml
+++ b/app/src/main/res/layout/activity_anime.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.edu.senac.projetinho.ui.Anime">
+    tools:context="com.edu.senac.projetinho.ui.AnimeDados">
 
     <TextView
         android:id="@+id/nomeAnimeView"
