--- a/app/src/main/res/layout/activity_visualizar_anime.xml
+++ b/app/src/main/res/layout/activity_visualizar_anime.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.edu.senac.projetinho.ui.AnimeDados">
+    tools:context="com.edu.senac.projetinho.ui.visualizar_anime">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
     <TextView
         android:id="@+id/nomeAnimeView"
@@ -53,16 +62,16 @@
         android:layout_marginVertical="7dp"
         android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/temporadasView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_weight="1"
-        android:fontFamily="casual"
-        android:text="Temporadas :"
-        android:textColor="#111010"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/temporadasView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:fontFamily="casual"
+            android:text="Temporadas :"
+            android:textColor="#111010"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/temporadasTextView"
@@ -81,16 +90,16 @@
         android:layout_marginVertical="7dp"
         android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/episodiosView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_weight="1"
-        android:fontFamily="casual"
-        android:text="Episodios :"
-        android:textColor="#111010"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/episodiosView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:fontFamily="casual"
+            android:text="Episodios :"
+            android:textColor="#111010"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/episodiosTextView"
@@ -109,16 +118,16 @@
         android:layout_marginVertical="7dp"
         android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/dataLView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:fontFamily="casual"
-        android:layout_weight="1"
-        android:text="Data de Lançamento :"
-        android:textColor="#111010"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/dataLView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="casual"
+            android:layout_weight="1"
+            android:text="Data de Lançamento :"
+            android:textColor="#111010"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/dataLTextView"
@@ -197,6 +206,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:onClick="update"
             android:layout_weight="1"
             android:backgroundTint="#00C853"
             android:fontFamily="casual"
@@ -217,3 +227,5 @@
     </LinearLayout>
 
 </LinearLayout>
+    </ScrollView>
+    </LinearLayout>
